--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p>hello world</p>
     <!-- script -->
     <script src="script.js"></script>
+    
 </body>
 </html>
