adding background color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>hello world</p>
+    <main> <p>hello world</p></main>
+   
     <!-- script -->
     <script src="script.js"></script>
     
